--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,17 +4,26 @@ name: Java CI with Maven
 on: [push]
 
 jobs:
+
   build:
 
     runs-on: ubuntu-latest
 
     steps:
+    
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 1.8
       uses: actions/setup-java@v3
       with:
         java-version: '8.0.332+9'
         distribution: 'temurin'
         cache: maven
+        
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
