--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,6 +24,4 @@ jobs:
       run: mvn -B package --file pom.xml
       
     - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: 'coveralls_token'
+      uses: codecov/codecov-action@v3
