--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,5 +23,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
+    - name: Test(JaCoCo)
+      run: mvn test jacoco:report
+    
     - name: Coveralls
       uses: codecov/codecov-action@v3
