--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Coveralls
       uses: codecov/codecov-action@v3
       with:
-        token: 'coveralls_token'
+        token: '285da295-603b-41a2-8a11-4083e921b92a'
