--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,4 +27,6 @@ jobs:
       run: mvn test jacoco:report
     
     - name: Coveralls
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-actione@v3
+      with:
+          fail_ci_if_error: true
