--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,12 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
           fail_ci_if_error: true
+
+    - name: Coveralls (mvn)
+      run: mvn coveralls:report --define repoToken=${{ secrets.COVERALLS_SECRET }}
+ 
+    - name: Coveralls (GH Actions)
+      uses: codecov/codecov-action@v3
+      with:
+          fail_ci_if_error: true
+          secret: ${{ secrets.COVERALLS_SECRET }}
